# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import authRouter from "./auth.js";
+import quizzesRouter from "./quizzes.js";
+import attemptsRouter from "./attempts.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/auth", authRouter);
+router.use("/quizzes", quizzesRouter);
+router.use("/attempts", attemptsRouter);
 
 export default router;
